# decoy

./: .gitignore  LICENSE  README.md  Untitled.ipynb  cli  cli_io.py  decoy.py  notebook.ipynb  pyproject.toml  requirements.txt  sql_parse.ipynb  test_generator.sql
.github/workflows/: python-app.yml
decoy/: cli.py  cli_io.py  database.py  generate_udfspec.py  kernel.json  kernel.py  ref_udfspec_full_args.yml  ref_udfspec_no_args.yml  schema_parse.py  settings.py  udf_arrow.py  udf_custom_functions.py  udf_numpy.py  udf_scalar.py  udfspec.yml  xeger.py
decoy/UDFs/: udf_arrow.py  udf_numpy.py
examples/: Distributions.ipynb  Example Data Cross Join.ipynb  WIP_working_with_pandas.ipynb  arguments.sql  basic.sql  basic_error.sql  export_northwind.sql  export_to_csv.sql  faker_and_mimesis.sql  messydata_addjunk.sql  messydata_addnulls.sql  mimesis.sql  multi.sql  northwind.sql  notebook.ipynb  numpy.sql  schema_parse_output.sql  synthetic_country.ipynb  test_schema.sql  working_with_pandas.ipynb  xeger.sql
tests/: test_decoy.py
