[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "duckdb-decoy"
authors = [
  { name = "Ian George", email = "ian@quiet.sh" },
  { name = "Adam Fletcher", email = "adam.fletcher@equalexperts.com" },
]
description = "Synthetic data functions and tooling for duckdb"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["duckdb", "synthetic", "data"]
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "duckdb",
  "click",
  "faker",
  "mimesis",
  "pandas",
  "pyarrow",
  "pygments",
  "pydantic==1.10.10",
  "ipykernel",
  "jupyterlab",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "pytest"]

[project.scripts]
decoy = "decoy.cli:rootcmd"
